[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/menu_assets/game_title.png" type="Texture" id=1]
[ext_resource path="res://menu/menu_assets/play_button.png" type="Texture" id=2]
[ext_resource path="res://menu/menu_assets/exit_button.png" type="Texture" id=3]
[ext_resource path="res://menu/menu_assets/option_button.png" type="Texture" id=4]
[ext_resource path="res://menu/menu_buttons.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "MenuFadeIn"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}

[node name="Buttons_Title" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MenuFadeIn = SubResource( 1 )

[node name="Title" type="Sprite" parent="."]
position = Vector2( 150, 25 )
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )
centered = false

[node name="Play" type="Button" parent="."]
margin_left = 210.0
margin_top = 210.0
margin_right = 286.0
margin_bottom = 232.0
rect_scale = Vector2( 5, 5 )
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="."]
margin_left = 210.0
margin_top = 320.0
margin_right = 286.0
margin_bottom = 343.0
rect_scale = Vector2( 5, 5 )
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = 210.0
margin_top = 440.0
margin_right = 286.0
margin_bottom = 462.0
rect_scale = Vector2( 5, 5 )
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
